// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`drawXYArrays edge cases handles reversed region 1`] = `
{
  "imageData": Any<Object>,
  "reducedFeatures": {
    "ends": [
      50,
      100,
      150,
    ],
    "maxScores": undefined,
    "minScores": undefined,
    "scores": [
      30,
      60,
      90,
    ],
    "starts": [
      0,
      50,
      100,
    ],
  },
}
`;

exports[`drawXYArrays edge cases handles single feature 1`] = `
{
  "imageData": Any<Object>,
  "reducedFeatures": {
    "ends": [
      100,
    ],
    "maxScores": undefined,
    "minScores": undefined,
    "scores": [
      75,
    ],
    "starts": [
      50,
    ],
  },
}
`;

exports[`drawXYArrays non-pixel-dedup path (features >= 1px) renders features larger than 1px 1`] = `
{
  "imageData": Any<Object>,
  "reducedFeatures": {
    "ends": [
      100,
      200,
      300,
    ],
    "maxScores": undefined,
    "minScores": undefined,
    "scores": [
      30,
      60,
      90,
    ],
    "starts": [
      0,
      100,
      200,
    ],
  },
}
`;

exports[`drawXYArrays non-pixel-dedup path (features >= 1px) renders features with gaps using fudge factor 1`] = `
{
  "imageData": Any<Object>,
  "reducedFeatures": {
    "ends": [
      100,
      210,
      300,
    ],
    "maxScores": undefined,
    "minScores": undefined,
    "scores": [
      50,
      50,
      50,
    ],
    "starts": [
      0,
      110,
      220,
    ],
  },
}
`;

exports[`drawXYArrays pixel dedup path handles features spanning multiple pixels when first feature is sub-pixel 1`] = `
{
  "imageData": Any<Object>,
  "reducedFeatures": {
    "ends": [
      5,
      20,
      200,
    ],
    "maxScores": undefined,
    "minScores": undefined,
    "scores": [
      50,
      60,
      70,
    ],
    "starts": [
      0,
      10,
      100,
    ],
  },
}
`;

exports[`drawXYArrays pixel dedup path renders sub-pixel features that tile contiguously 1`] = `
{
  "imageData": Any<Object>,
  "reducedFeatures": {
    "ends": [
      1,
      10,
      20,
      30,
      40,
      50,
      60,
      70,
      80,
      90,
      100,
      110,
      120,
      130,
      140,
      150,
      160,
      170,
      180,
      190,
      200,
      210,
      220,
      230,
      240,
      250,
      260,
      270,
      280,
      290,
      300,
      310,
      320,
      330,
      340,
      350,
      360,
      370,
      380,
      390,
      400,
      410,
      420,
      430,
      440,
      450,
      460,
      470,
      480,
      490,
      500,
      510,
      520,
      530,
      540,
      550,
      560,
      570,
      580,
      590,
      600,
      610,
      620,
      630,
      640,
      650,
      660,
      670,
      680,
      690,
      700,
      710,
      720,
      730,
      740,
      750,
      760,
      770,
      780,
      790,
      800,
      810,
      820,
      830,
      840,
      850,
      860,
      870,
      880,
      890,
      900,
      910,
      920,
      930,
      940,
      950,
      960,
      970,
      980,
      990,
      1000,
    ],
    "maxScores": undefined,
    "minScores": undefined,
    "scores": [
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
    ],
    "starts": [
      0,
      9,
      19,
      29,
      39,
      49,
      59,
      69,
      79,
      89,
      99,
      109,
      119,
      129,
      139,
      149,
      159,
      169,
      179,
      189,
      199,
      209,
      219,
      229,
      239,
      249,
      259,
      269,
      279,
      289,
      299,
      309,
      319,
      329,
      339,
      349,
      359,
      369,
      379,
      389,
      399,
      409,
      419,
      429,
      439,
      449,
      459,
      469,
      479,
      489,
      499,
      509,
      519,
      529,
      539,
      549,
      559,
      569,
      579,
      589,
      599,
      609,
      619,
      629,
      639,
      649,
      659,
      669,
      679,
      689,
      699,
      709,
      719,
      729,
      739,
      749,
      759,
      769,
      779,
      789,
      799,
      809,
      819,
      829,
      839,
      849,
      859,
      869,
      879,
      889,
      899,
      909,
      919,
      929,
      939,
      949,
      959,
      969,
      979,
      989,
      999,
    ],
  },
}
`;

exports[`drawXYArrays pixel dedup path renders sub-pixel features with gaps correctly 1`] = `
{
  "imageData": Any<Object>,
  "reducedFeatures": {
    "ends": [
      1,
      21,
      41,
      61,
      81,
    ],
    "maxScores": undefined,
    "minScores": undefined,
    "scores": [
      50,
      50,
      50,
      50,
      50,
    ],
    "starts": [
      0,
      20,
      40,
      60,
      80,
    ],
  },
}
`;
